--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
   <h2>Select a video to upload:</h2>
   <div class="upload-container">
     <input id="file-picker" type="file" name="image">
-    <input type="text" name="name" placeholder="Enter your username">
+    <input type="text" name="user_id" placeholder="Enter your user id">
   </div>
   <div><input type="submit" value="Upload Video"></div>
 </form>
