Logic to store hashtag for each upload

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
   <div class="upload-container">
     <input id="file-picker" type="file" name="image">
     <input type="text" name="user_id" placeholder="Enter your user id">
+    <input type="text" name="hash_tag" placeholder="Enter hashtag">
   </div>
   <div><input type="submit" value="Upload Video"></div>
 </form>
